test_regress/t/t_metacmt_onoff.out
%Warning-ASCENDINGRANGE: t/t_metacmt_onoff.v:8:8: Big bit endian vector: left < right of bit range: [0:1]
                                           : ... In instance t
    8 |    reg [0:1] show1; /*verilator lint_off ASCENDINGRANGE*/  reg [0:2] ign2; /*verilator lint_on ASCENDINGRANGE*/   reg [0:3] show3;
      |        ^
                    ... For warning description see https://verilator.org/warn/ASCENDINGRANGE?v=latest
                    ... Use "/* verilator lint_off ASCENDINGRANGE */" and lint_on around source to disable this message.
%Warning-ASCENDINGRANGE: t/t_metacmt_onoff.v:8:109: Big bit endian vector: left < right of bit range: [0:3]
                                             : ... In instance t
    8 |    reg [0:1] show1; /*verilator lint_off ASCENDINGRANGE*/  reg [0:2] ign2; /*verilator lint_on ASCENDINGRANGE*/   reg [0:3] show3;
      |                                                                                                             ^
%Error: Exiting due to
